<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project
     Copyright (C) 2017-2020 The LineageOS Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <!-- Application name shown in Launcher [CHAR LIMIT=20] -->
    <string name="app_name">FM Radio</string>
    <!-- Toast message shown after we refresh radio stations successfully [CHAR LIMIT=50] -->
    <string name="toast_station_searched">Searched out available stations:</string>
    <!-- Toast message shown after we refresh radio stations failed [CHAR LIMIT=50] -->
    <string name="toast_cannot_search">Cannot search out available station.</string>
    <!-- Title of a menu item to change FM sound output to speaker [CHAR LIMIT=20] -->
    <string name="optmenu_speaker">Speaker</string>
    <!-- Title of a menu item to change FM sound output to earphone [CHAR LIMIT=20] -->
    <string name="optmenu_earphone">Earphone</string>
    <!-- Dialog "Save" button to save a new station name [CHAR LIMIT=20] -->
    <string name="save">Save</string>
    <!-- Toast message shown when we record without sdcard [CHAR LIMIT=50] -->
    <string name="toast_sdcard_missing">Your SD card is missing!</string>
    <!-- Toast message shown when we record but sdcard has no free space [CHAR LIMIT=50] -->
    <string name="toast_sdcard_insufficient_space">Insufficient SD card space!</string>
    <!-- Toast message shown when record or playback record has some internal error
         [CHAR LIMIT=NONE] -->
    <string name="toast_recorder_internal_error">An internal error occured in recorder!</string>
    <!-- Dialog "Save" button to save the FM recording [CHAR LIMIT=20] -->
    <string name="btn_save_recording">Save</string>
    <!-- Dialog "Discard" button to discard the FM recording [CHAR LIMIT=20] -->
    <string name="btn_discard_recording">Discard</string>
    <!-- EditText hint for save recording dialog [CHAR LIMIT=50] -->
    <string name="edit_recording_name_hint">Type file name here</string>
    <!-- Toast message shown when we save the recording name which is already exists
         [CHAR LIMIT=50] -->
    <string name="already_exists">already exists</string>
    <!-- Toast message shown when FM power up failed [CHAR LIMIT=30] -->
    <string name="not_available">Currently not available</string>
    <!-- Talkback message for previous station button [CHAR LIMIT=30] -->
    <string name="talk_prev_station">Previous station</string>
    <!-- Talkback message for decrease frequency button [CHAR LIMIT=30] -->
    <string name="talk_decrease">Decrease frequency</string>
    <!-- Talkback message for increase frequency button [CHAR LIMIT=30] -->
    <string name="talk_increase">Increase frequency</string>
    <!-- Talkback message for next station button [CHAR LIMIT=30] -->
    <string name="talk_next_station">Next station</string>
    <!-- Talkback message for next station button [CHAR LIMIT=30] -->
    <string name="talk_add_favorite">Add to favorite</string>
    <!-- Talkback message for start recording button [CHAR LIMIT=30] -->
    <string name="talk_start_recording">Start recording</string>
    <!-- Talkback message for favorit card more menu [CHAR LIMIT=30] -->
    <string name="more">"More"</string>
    <!-- The tips shown when we start recording [CHAR LIMIT=30] -->
    <string name="recording_tips">Recording…</string>
    <!-- The text "FM" shown in FM main screen [CHAR LIMIT=30] -->
    <string name="fm_symbol">FM</string>
    <!-- Talkback message for the floating button which will play or stop FM sound
         [CHAR LIMIT=30] -->
    <string name="fm_turn_on">Play or stop FM radio</string>
    <!-- Title of a menu item to start recording FM sound [CHAR LIMIT=30] -->
    <string name="fm_over_start_record">Start recording</string>
    <!-- Title of a menu item to see the saved recordings in play music  [CHAR LIMIT=30] -->
    <string name="fm_over_record_list">Saved recordings</string>
    <!-- Title of a menu item to refresh the station list  [CHAR LIMIT=30] -->
    <string name="fm_station_list_menu_refresh">Refresh</string>
    <!-- The tips shown when without an earphone or plug out the earphone [CHAR LIMIT=NONE] -->
    <string name="fm_no_headset_text">To start listening, plug in headphones (used as an antenna).</string>
    <!-- Actionbar title for station list. It will show in the action bar [CHAR LIMIT=50] -->
    <string name="station_title">Radio Stations</string>
    <!-- The tips shown when we refresh in station list [CHAR LIMIT=50] -->
    <string name="station_searching_tips">Getting stations</string>
    <!-- The tips shown when we refresh in station list but no stations found [CHAR LIMIT=50] -->
    <string name="station_empty_text">No stations found</string>
    <!-- It means "minutes" that shown in record screen [CHAR LIMIT=2] -->
    <string name="minutes_label">M</string>
    <!-- It means "seconds" that shown in record screen [CHAR LIMIT=2] -->
    <string name="seconds_label">S</string>
    <!-- The default number for record screen. It will show "00M 00S" [CHAR LIMIT=2] -->
    <string name="timer_default">00</string>
    <!-- Actionbar title for recording FM. It will show in the action bar [CHAR LIMIT=20] -->
    <string name="record_title">Recording</string>
    <!-- The text shown in notification when currently is recording [CHAR LIMIT=50] -->
    <string name="record_notification_message">Recording in progress</string>
    <!-- Stop recording button shown when currently is recording [CHAR LIMIT=20] -->
    <string name="stop_record">STOP RECORDING</string>
    <!-- Title of save dialog shown when stop recording [CHAR LIMIT=40] -->
    <string name="save_dialog_title">Save recording?</string>
    <!-- Tips of save dialog shown when stop recording [CHAR LIMIT=NONE] -->
    <string name="save_dialog_caption">To listen to recordings, open the Play Music app.</string>
    <!-- Title of favorite area shown when we have favorite stations [CHAR LIMIT=50] -->
    <string name="favorites">Favorites</string>
    <!-- Title of a menu in favorite card more menu. It means rename a station [CHAR LIMIT=50] -->
    <string name="rename">Rename</string>
    <!-- EditText hint for rename station dialog [CHAR LIMIT=50] -->
    <string name="station_rename_hint">Enter station name</string>
    <!-- Title of a menu in favorite card more menu. It means remove a station from favorite
         [CHAR LIMIT=50] -->
    <string name="remove_favorite">Remove favorite</string>
    <!-- Snackbar message shown after we save a recording [CHAR LIMIT=50] -->
    <string name="toast_record_saved">Recording saved</string>
    <!-- Snackbar message shown after we discard a recording [CHAR LIMIT=50] -->
    <string name="toast_record_not_saved">Recording not saved</string>
    <!-- Button in snackbar shown we save a recording. It will enter play music to listen recording
         [CHAR LIMIT=12] -->
    <string name="toast_listen">LISTEN</string>
    <!-- Snackbar message shown after we rename a favorite station [CHAR LIMIT=50] -->
    <string name="toast_station_renamed">The station has been renamed</string>
    <!-- All recordings will show up in the media database with this 'artist' name -->
    <string name="audio_db_artist_name">My FM recordings</string>
    <!-- All recordings will show up in the media database with this 'album' name -->
    <string name="audio_db_album_name">FM recordings</string>
    <!-- All recordings will show up in the media database in a playlist with this name -->
    <string name="audio_db_playlist_name">FM recordings</string>
    <!-- All recordings will be saved in directory with this name -->
    <string name="audio_save_dir_name">FM recordings</string>

    <!-- Content descriptions -->
    <string name="accessibility_play">Play</string>
    <string name="accessibility_pause">Pause</string>
    <string name="accessibility_next">Next</string>
    <string name="accessibility_prev">Previous</string>

    <!-- Font family for notification artwork text -->
    <string name="fm_notification_artwork_font_family" translatable="false">roboto</string>
</resources>
