<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_fm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/actionbar_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/text_fm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:fontFamily="sans-serif"
                android:paddingLeft="16dip"
                android:paddingTop="56dip"
                android:text="@string/fm_symbol"
                android:textColor="@color/header_fm_label_color"
                android:textSize="@dimen/text_fm_size" />

            <TextView
                android:id="@+id/station_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:fontFamily="sans-serif-light"
                android:gravity="left"
                android:paddingLeft="16dip"
                android:paddingTop="64dip"
                android:textColor="@color/header_station_value_color"
                android:textSize="@dimen/station_value_size" />

            <TextView
                android:id="@+id/station_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignWithParentIfMissing="true"
                android:alpha="0.87"
                android:gravity="left"
                android:paddingLeft="16dip"
                android:singleLine="true"
                android:textColor="@color/header_station_name_color"
                android:textSize="@dimen/station_name_size" />

            <TextView
                android:id="@+id/station_rds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:alpha="0.87"
                android:ellipsize="marquee"
                android:gravity="left"
                android:marqueeRepeatLimit="marquee_forever"
                android:paddingLeft="16dip"
                android:paddingRight="16dip"
                android:singleLine="true"
                android:textColor="@color/header_station_rds_color"
                android:textSize="@dimen/station_rds_size" />

            <Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <LinearLayout
                android:id="@+id/rl_imgbtnpart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/fm_rl_imgbtnpart_margin_left"
                android:layout_marginRight="@dimen/fm_rl_imgbtnpart_margin_right"
                android:gravity="center"
                android:orientation="horizontal"
                android:splitMotionEvents="false"
                android:weightSum="6" >

                <LinearLayout
                    android:id="@+id/rl_inner_container1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >
                    <ImageButton
                        android:id="@+id/button_prevstation"
                        android:layout_width="@dimen/fm_rl_imgbtn_size"
                        android:layout_height="@dimen/fm_rl_imgbtn_size"
                        android:adjustViewBounds="true"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:tint="@color/prevstation_button_color"
                        android:contentDescription="@string/talk_prev_station"
                        android:enabled="false"
                        android:src="@drawable/btn_fm_previous" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_inner_container2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >
                    <ImageButton
                        android:id="@+id/button_decrease"
                        android:layout_width="@dimen/fm_rl_imgbtn_size"
                        android:layout_height="@dimen/fm_rl_imgbtn_size"
                        android:adjustViewBounds="true"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:tint="@color/decrstation_button_color"
                        android:contentDescription="@string/talk_decrease"
                        android:enabled="false"
                        android:src="@drawable/btn_fm_decrease_selector" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_inner_container3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:paddingLeft="@dimen/fm_rl_imgbtn_add_to_favorite_padding_left"
                    android:paddingRight="@dimen/fm_rl_imgbtn_add_to_favorite_padding_left"
                    android:gravity="center" >
                    <ImageButton
                        android:id="@+id/button_add_to_favorite"
                        android:layout_width="@dimen/fm_rl_imgbtn_size"
                        android:layout_height="@dimen/fm_rl_imgbtn_size"
                        android:adjustViewBounds="true"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/talk_add_favorite"
                        android:enabled="false"
                        android:src="@drawable/btn_fm_favorite_off_selector" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_inner_container4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >
                    <ImageButton
                        android:id="@+id/button_increase"
                        android:layout_width="@dimen/fm_rl_imgbtn_size"
                        android:layout_height="@dimen/fm_rl_imgbtn_size"
                        android:adjustViewBounds="true"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:tint="@color/incstation_button_color"
                        android:contentDescription="@string/talk_increase"
                        android:enabled="false"
                        android:src="@drawable/btn_fm_increase_selector" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_inner_container5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" >
                    <ImageButton
                        android:id="@+id/button_nextstation"
                        android:layout_width="@dimen/fm_rl_imgbtn_size"
                        android:layout_height="@dimen/fm_rl_imgbtn_size"
                        android:adjustViewBounds="true"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:tint="@color/nextstation_button_color"
                        android:contentDescription="@string/talk_next_station"
                        android:enabled="false"
                        android:src="@drawable/btn_fm_next_selector" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
