<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014,2022 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/timer_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="16dip"
        android:layout_marginStart="16dip"
        android:layout_weight="100"
        android:gravity="center" >

        <LinearLayout
            android:id="@+id/timer_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:singleLine="true"
                android:text="@string/timer_default"
                android:textColor="@color/recording_minutes_color"
                android:textSize="88sp" />

            <TextView
                android:id="@+id/minutes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:layout_marginRight="24dip"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:text="@string/minutes_label"
                android:textColor="@color/recording_minutes_color"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:singleLine="true"
                android:text="@string/timer_default"
                android:textColor="@color/recording_seconds_color"
                android:textSize="88sp" />

            <TextView
                android:id="@+id/seconds_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dip"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:text="@string/seconds_label"
                android:textColor="@color/recording_seconds_color"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/timer_content"
            android:gravity="center" >

            <TextView
                android:id="@+id/file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:singleLine="true"
                android:text="0 B"
                android:textColor="@color/recording_fsize_color"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/station_detail"
        android:layout_width="match_parent"
        android:layout_height="75dip"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/fm_recording_station_detail_margin_bottom"
        android:layout_marginEnd="16dip"
        android:layout_marginStart="16dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_toLeftOf="@+id/record_label"
            android:layout_alignParentLeft="true">

            <LinearLayout
                 android:id="@+id/frequency_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal" >

                <TextView
                    android:id="@+id/frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:fontFamily="sans-serif-medium"
                    android:singleLine="true"
                    android:textColor="@color/recording_frequency_color"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/fm_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="2dp"
                    android:alpha="0.8"
                    android:layout_gravity="top"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:text="@string/fm_symbol"
                    android:textColor="@color/recording_fm_label_color"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/station_name_rt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/station_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:visibility="gone"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@color/recording_station_color"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/radio_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:visibility="gone"
                    android:ellipsize="marquee"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:fontFamily="sans-serif"
                    android:singleLine="true"
                    android:textColor="@color/recording_rds_color"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/record_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">
                <ImageView
                    android:id="@+id/record_icon"
                    android:layout_width="24dip"
                    android:layout_height="24dip"
                    android:layout_gravity="center"
                    android:contentDescription="@string/record_notification_message"
                    android:alpha="0.8"
                    android:tint="@color/recording_dot_tint"
                    android:src="@drawable/record_active_ball" />

                <TextView
                    android:id="@+id/record_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="6dip"
                    android:fontFamily="sans-serif"
                    android:alpha="0.8"
                    android:text="REC"
                    android:textColor="@color/recording_dot_tint"
                    android:textStyle="bold"
                    android:textSize="20sp" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:layout_gravity="bottom"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:alpha="0.16"
            android:background="@color/recording_line_bg_color" />

        <Button
            android:id="@+id/btn_stop_record"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.87"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/stop_record"
            android:enabled="false"
            android:fontFamily="sans-serif-medium"
            android:text="@string/stop_record"
            android:textColor="@color/recording_stop_btn_color"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>
